# aiosurrealdb

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
aiosurrealdb/: __init__.py  exceptions.py  http.py  ws.py
examples/: existing_ClientSession.py  http_example.py  notebook_example.ipynb  websocket_example.py
