[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "aiosurrealdb"
version = "1.0"
description = "aiohttp verison of the surrealdb python library"
authors = [{ name = "chillymosh", email = "chillymosh@gmail.com" }]
dynamic = ["dependencies"]
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/chillymosh/aiosurrealdb"

[project.optional-dependencies]
speedup = [
    "orjson>=3.7.11",
    "aiodns>=3.0.0",
    "Brotli",
    'cchardet>=2.1.7,<3; python_version < "3.10"',
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
